--- a/web/03-Django/course/practice/templates/practice/students.html
+++ b/web/03-Django/course/practice/templates/practice/students.html
@@ -1,7 +1,11 @@
 {% if student_list %}
     <ul>
     {% for student in student_list %}
-        <li>{{ student.name }} {{ student.family }}</li>
+        <li>
+            <a href="{% url 'practice:edit_student' student.id %}">
+                {{ student }}
+            </a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
