--- a/web/03-Django/course/practice/templates/practice/edit_student.html
+++ b/web/03-Django/course/practice/templates/practice/edit_student.html
@@ -15,5 +15,10 @@
     <input type="submit" value="Save"/>
 </form>
 
+<form action="{% url 'practice:delete_student' student.id %}" method="post">
+    {% csrf_token %}
+    <input type="submit" value="Delete" />
+</form>
+
 </body>
 </html>
