--- a/web/03-Django/course/practice/templates/practice/add_student.html
+++ b/web/03-Django/course/practice/templates/practice/add_student.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Edit student</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Add Student</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-
-<form action="{% url 'practice:add_student' %}" method="post">
-    {% csrf_token %}
-    <input type="text" name="name"><br>
-    <input type="text" name="family"><br>
-    <input type="submit" value="Save"/>
-</form>
-
+<div class="container">
+    <h1>Add Student</h1>
+    <form action="{% url 'practice:add_student' %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control"
+                   name="name" placeholder="Name">
+        </div>
+        <div class="form-group">
+            <label>Family</label>
+            <input type="text" class="form-control"
+                   name="family" placeholder="Family">
+        </div>
+        <input class="btn btn-primary" type="submit" value="Save"/>
+    </form>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
