--- a/web/03-Django/course/practice/templates/practice/students.html
+++ b/web/03-Django/course/practice/templates/practice/students.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Basic Bootstrap Template</title>
+    <title>Students list</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
@@ -32,7 +32,7 @@
         <p>No students are available.</p>
     {% endif %}
 
-    <a class="btn btn-primary" href="{% url 'practice:add_student' %}" role="button">Add new Student</a>
+    <a class="btn btn-primary" href="{% url 'practice:add_student' %}" role="button">Add new</a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
